# neuro_crm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.nginx.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: cd.yml  ci.yml
docker/: docker-compose.letsencrypt.yml
docker/nginx/conf/: default.template  letsencrypt.template
neuro_crm/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
neuro_crm/api/: urls.py
neuro_crm/api/healthcheck/: views.py
neuro_crm/apps/clients/: admin.py  apps.py  factories.py  models.py  tests.py
neuro_crm/apps/clients/migrations/: 0001_initial.py
neuro_crm/apps/courses/: admin.py  factories.py  models.py  tests.py
neuro_crm/apps/courses/migrations/: 0001_initial.py  0002_initial.py
neuro_crm/apps/specialists/: admin.py  factories.py  models.py  tests.py
neuro_crm/apps/specialists/migrations/: 0001_initial.py  0002_initial.py  0002_specialist_description_alter_speciality_description.py
neuro_crm/apps/users/: admin.py  factories.py  managers.py  models.py  tests.py
neuro_crm/apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py
neuro_crm/core/: admin.py  celery.py  models.py  tasks.py  tests.py
neuro_crm/settings/: base.py  local.py  prod.py
neuro_crm/templates/: base.html  home.html
neuro_crm/tests/: tests.py
nginx/: README.md  docker-compose.yml
nginx/nginx/conf/: default.template
tests/: tests.py
