[project]
name = "neuro-crm"
version = "0.0.1"
description = "Neuro CRM"
license = { file = "LICENSE" }
authors = [{ name = "Sergey Dubovitsky" }]
requires-python = ">=3.12, <3.13"
readme = "README.md"

[tool.ruff]
line-length = 79
src = ["neuro_crm"]

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/urls.py",
    "manage.py",
    "*/management/commands/*",
    "neuro_crm/wsgi.py",
    "neuro_crm/asgi.py",
]
source = ["neuro_crm"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "neuro_crm.settings.local"
